Bug 517280 - The weather widget shows a blue circle after suspended to ram which does not stop cycling.
Summary: The weather widget shows a blue circle after suspended to ram which does not ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Weather widget (other bugs)
Version First Reported In: 6.5.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 518049 521034 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-03-08 09:50 UTC by Toralf Förster
Modified: 2026-06-10 17:59 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toralf Förster 2026-03-08 09:50:41 UTC
Happened after s2ram.
Network is ok
Comment 1 Akseli Lahtinen 2026-03-09 10:44:26 UTC
Can you share more information of your system? You can find it from Info Center -> Copy Details and paste it in here. Thanks.
Comment 2 Toralf Förster 2026-03-10 07:54:40 UTC
ofc:

Operating System: Gentoo Linux 2.18
KDE Plasma Version: 6.5.5
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Kernel Version: 6.18.16 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 PRO 6850U with Radeon Graphics
Memory: 32 GiB of RAM (30.1 GiB usable)
Graphics Processor: AMD Radeon Graphics
Manufacturer: LENOVO
Product Name: 21J5002FGE
System Version: ThinkPad P14s Gen 3
Comment 3 TraceyC 2026-03-10 20:35:33 UTC
Thanks for your system information. The current, maintained version of Plasma is 6.6.2. Can you update your system to this and let us know if the weather widget still experiences the bug?
Comment 4 Toralf Förster 2026-03-21 09:12:40 UTC
(In reply to TraceyC from comment #3)
> Thanks for your system information. The current, maintained version of
> Plasma is 6.6.2. Can you update your system to this and let us know if the
> weather widget still experiences the bug?

same with 6.6.3
Comment 5 TraceyC 2026-03-22 21:00:54 UTC
Well darn. Thanks for confirming.
Comment 6 Louis Moureaux 2026-04-10 09:21:57 UTC
I can confirm that this always eventually happens after suspending to RAM several times. The widget shows no information while the progress indicator is spinning.

Resetting the location temporarily solves the issue. I suspect that an update may fail to time out properly.

Operating System: KDE neon User Edition
KDE Plasma Version: 6.6.3
KDE Frameworks Version: 6.24.0
Qt Version: 6.10.2
Graphics Platform: Wayland
Comment 7 Bogdan Onofriuchuk 2026-06-08 09:29:33 UTC
*** Bug 521034 has been marked as a duplicate of this bug. ***
Comment 8 Bogdan Onofriuchuk 2026-06-08 09:34:53 UTC
*** Bug 518049 has been marked as a duplicate of this bug. ***
Comment 9 Bug Janitor Service 2026-06-08 12:09:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/1073
Comment 10 Bogdan Onofriuchuk 2026-06-08 12:45:01 UTC
Git commit d85d899bd201eef5c0f4eedfae90462a3f347216 by Bohdan Onofriichuk.
Committed on 08/06/2026 at 12:08.
Pushed by littlesweet into branch 'Plasma/6.7'.

applets/weather: reset busy state when offline update is queued


(cherry picked from commit 4883ad8792033b5be80b63d50e081198b73e7605)

Co-authored-by: Ce Sun <someoneinjd@outlook.com>

M  +1    -0    applets/weather/ioncontrol_p.cpp

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/d85d899bd201eef5c0f4eedfae90462a3f347216