applets/weather: reset busy state when offline update is queued

BUG: 517280


(cherry picked from commit 4883ad8792033b5be80b63d50e081198b73e7605)

Co-authored-by: Ce Sun <someoneinjd@outlook.com>